--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,15 @@
   publish = "public"
   functions = "netlify/functions"
 
+[functions]
+  directory = "netlify/functions"
+
+[[redirects]]
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+  force = true
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
