--- a/netlify.toml
+++ b/netlify.toml
@@ -5,16 +5,12 @@
 [functions]
   directory = "netlify/functions"
 
-[[redirects]]
-  from = "/.netlify/functions/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-  force = true
-
+# SPA redirect - NO forzar (permite que functions tengan prioridad)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
 
 [dev]
   command = "python3 -m http.server 8888"
